fix photo error, and features

--- a/src/scss/layout/index/_banner.scss
+++ b/src/scss/layout/index/_banner.scss
@@ -24,7 +24,7 @@
     }
     .subtitle-banner {
         margin: .5rem;
-        color: $red;
+        color: $white;
         font-weight: bolder;
     }
     
