--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -9,6 +9,7 @@ $tablet: 768px;
 $desktop: 1024px;
 
 // Colores
+$blueFooter: #007bff;
 $primary: #0054ff;
 $form_colours: #316ee2;
 $lightBlue: #0054ff;
