--- a/src/scss/layout/contact/_contact.scss
+++ b/src/scss/layout/contact/_contact.scss
@@ -34,7 +34,7 @@
         display: flex;
         flex-flow: column wrap;
         align-self: center;
-        //background: $purpleContact;
+
         width: 100%;
         @include tablet {
             width: 75%;
@@ -58,6 +58,12 @@
                 border: 1px solid #ccc;
                 border-radius:1em;
                 padding:.5rem;
+            }
+
+            #change-color {
+                &:hover {
+                    background-color: $blueFooter;
+                }
             }
 
             
